Updated components files

--- a/Components/Card Header/CardHeader.css
+++ b/Components/Card Header/CardHeader.css
@@ -1,18 +1,21 @@
-.swiper-slide-active .card-header-slide-layer {
+.card-header-container .swiper-slide-active .card-header-slide-layer {
   opacity: 0;
   transition: opacity 200ms ease-in;
 }
 
-.swiper-pagination-bullet {
-  flex: 1 1 0px;
-  height: 1px;
-  background-color: white;
-  border-radius: 0;
-  margin-left: rgba(255, 255, 255, 0.2);
+.card-header-container .swiper-pagination-bullet {
+  background-color: rgba(255, 255, 255, 0.2);
+  opacity: 1;
+  width: 12px;
+  height: 12px;
 }
 
-.swiper-pagination-bullet .swiper-pagination-bullet-active {
+.card-header-container .swiper-pagination-bullet-active {
   background-color: white;
+}
+
+.card-header-container .swiper-pagination-bullet:not(:first-child) {
+  margin-left: 16px;
 }
 
 .card-header-container {
